--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -18,8 +18,11 @@ DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
 [/Script/Engine.RendererSettings]
 r.GenerateMeshDistanceFields=True
 r.DynamicGlobalIlluminationMethod=1
-r.ReflectionMethod=1
+r.ReflectionMethod=2
 r.Shadow.Virtual.Enable=1
+r.DefaultFeature.AutoExposure=False
+r.DefaultFeature.MotionBlur=False
+r.AntiAliasingMethod=2
 
 [/Script/WorldPartitionEditor.WorldPartitionEditorSettings]
 CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
