--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -5,7 +5,7 @@ GameDefaultMap=/Game/RetroGraphics/DemoContent/Maps/RetroGraphics_Demo.RetroGrap
 
 
 EditorStartupMap=/Game/Maps/Test.Test
-GlobalDefaultGameMode=/Game/FirstPerson/Blueprints/BP_FirstPersonGameMode.BP_FirstPersonGameMode_C
+GlobalDefaultGameMode=/Game/Blueprints/BP_GameMode.BP_GameMode_C
 GameInstanceClass=/Game/Blueprints/BP_GameInstance.BP_GameInstance_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
