post jam update

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -27,6 +27,8 @@ r.DefaultFeature.MotionBlur=False
 r.AntiAliasingMethod=0
 r.MSAACount=1
 r.NormalMapsForStaticLighting=True
+r.AllowStaticLighting=False
+r.Mobile.EnableNoPrecomputedLightingCSMShader=True
 
 [/Script/WorldPartitionEditor.WorldPartitionEditorSettings]
 CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
